src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-17.snap
---
source: src/lexer.rs
description: "\""
---
[
    Token {
        kind: DoubleQuote,
        value: None,
    },
]
