src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-18.snap
---
source: src/lexer.rs
description: "#"
---
[
    Token {
        kind: Sharp,
        value: None,
    },
]
