src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-23.snap
---
source: src/lexer.rs
description: "->"
---
[
    Token {
        kind: Arrow,
        value: None,
    },
]
