src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-24.snap
---
source: src/lexer.rs
description: +=
---
[
    Token {
        kind: AddAssign,
        value: None,
    },
]
