src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-26.snap
---
source: src/lexer.rs
description: "*="
---
[
    Token {
        kind: MulAssign,
        value: None,
    },
]
