src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-27.snap
---
source: src/lexer.rs
description: /=
---
[
    Token {
        kind: DivAssign,
        value: None,
    },
]
