src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-28.snap
---
source: src/lexer.rs
description: "%="
---
[
    Token {
        kind: ModAssign,
        value: None,
    },
]
