src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-30.snap
---
source: src/lexer.rs
description: "&="
---
[
    Token {
        kind: BitAndAssign,
        value: None,
    },
]
