src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-31.snap
---
source: src/lexer.rs
description: "|="
---
[
    Token {
        kind: BitOrAssign,
        value: None,
    },
]
