src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-32.snap
---
source: src/lexer.rs
description: ^=
---
[
    Token {
        kind: BitXorAssign,
        value: None,
    },
]
