src/snapshots/enderpy__lexer__tests__snapshot_test_lexer-34.snap
---
source: src/lexer.rs
description: "<<="
---
[
    Token {
        kind: BitShiftLeftAssign,
        value: None,
    },
]
